sumo/tests/sumo/errors/routes/invalid_departpos/errors.sumo
Warning: Invalid departPos 600.00 given for vehicle '0'. Inserting at lane end instead.
